# sync-video-server

./: Cargo.toml  README.md  build.rs
protobuf/: message.proto
src/: main.rs
tests/: client.rs
