[package]
name = "server"
version = "0.1.0"
authors = ["Lingxiang \"LinG\" Wang <lingxiang.wang@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
anyhow = "1.0"
prost = "0.6.1"
bytes = "0.6.0"

[build-dependencies]
prost-build = { version = "0.6.1" }